; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_sqlite3.c_walBusyLock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_sqlite3.c_walBusyLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32 (i8*)*, i8*, i32, i32)* @walBusyLock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @walBusyLock(i32* %0, i32 (i8*)* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32 (i8*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 (i8*)* %1, i32 (i8*)** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  br label %12

12:                                               ; preds = %29, %5
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @walLockExclusive(i32* %13, i32 %14, i32 %15)
  store i32 %16, i32* %11, align 4
  br label %17

17:                                               ; preds = %12
  %18 = load i32 (i8*)*, i32 (i8*)** %7, align 8
  %19 = icmp ne i32 (i8*)* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %17
  %21 = load i32, i32* %11, align 4
  %22 = load i32, i32* @SQLITE_BUSY, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load i32 (i8*)*, i32 (i8*)** %7, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32 %25(i8* %26)
  %28 = icmp ne i32 %27, 0
  br label %29

29:                                               ; preds = %24, %20, %17
  %30 = phi i1 [ false, %20 ], [ false, %17 ], [ %28, %24 ]
  br i1 %30, label %12, label %31

31:                                               ; preds = %29
  %32 = load i32, i32* %11, align 4
  ret i32 %32
}

declare dso_local i32 @walLockExclusive(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
